cmake_minimum_required(VERSION 3.5)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt5 COMPONENTS Network REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Network REQUIRED)

set(NET_IOWIDGET_HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(NET_IOWIDGET_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})

set(NET_IOWIDGET_HEADERS
        ${NET_IOWIDGET_HEADERS_DIR}/NetIOWidget.h
        ${NET_IOWIDGET_HEADERS_DIR}/NetIOWidgetCreator.h
)

set(NET_IOWIDGET_SOURCE
        ${NET_IOWIDGET_SOURCE_DIR}/NetIOWidget.cpp
        ${NET_IOWIDGET_SOURCE_DIR}/NetIOWidgetCreator.cpp
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_library(NetIoWidget SHARED ${NET_IOWIDGET_SOURCE} ${NET_IOWIDGET_HEADERS})
else()
    add_library(NetIoWidget SHARED ${NET_IOWIDGET_SOURCE} ${NET_IOWIDGET_HEADERS})
endif()

target_include_directories(NetIoWidget PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(NetIoWidget PRIVATE Qt${QT_VERSION_MAJOR}::Network)

target_link_libraries(NetIoWidget PRIVATE ProtodbIoWidget)




